pkg/controller/ingress/testdata/ingress/existing.yaml
apiVersion: v1
data:
  config: '{"acornDNS":"enabled"}'
kind: ConfigMap
metadata:
  name: acorn-config
  namespace: acorn-system
---
apiVersion: v1
stringData:
  domain: test.oss-acorn.io
  token: token
kind: Secret
metadata:
  name: acorn-dns
  namespace: acorn-system
type: Opaque
