pkg/controller/ingress/testdata/ingress/input.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: acorn-dns-ingress
  namespace: acorn-system
  labels:
    "acorn.io/managed": "true"
  # Note the absence of acorn.io/dns-hash annotation
spec:
  rules:
    - host: acorn-dns-ingress.oss-acorn.io
      http:
        paths:
          - backend:
              service:
                name: acorn-service
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 127.0.0.2
